Implement support for mounting UDF in compat32 Fixes PR#56801